spot delete feature css changed, map page fixed on mobile

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -187,6 +187,7 @@ a {
 
   .map {
     height: 100vh !important;
+    max-width: (calc(100vw - 400px));
   }
 
   .navbar {
@@ -268,6 +269,10 @@ a {
   a {
     font-size: 1rem;
     margin: 0.5rem 0.5rem 1rem 0.5rem;
+  }
+
+  .map {
+    height: 100vh !important;
   }
 }
 
